--- a/pagina/educacion.html
+++ b/pagina/educacion.html
@@ -2,6 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, user scalable=no">
+<meta name="author contente="Marissel Henrriquez">
+
+<svg>
+<image xlink:href="../Imagenes/svg/dibujoLogoMarissel.svg" width="200" height="200"> 
+</image>
+</svg>
+  
+
 <title>Educacion </title>
 </head>
 
@@ -67,11 +76,11 @@
         
         <p>
 			<label for="Institucion">Institucion</label>
-            <input type="text" name="Institucion ">
+            <input id="Institucion" type="text" placeholder="Ingrese la institucion" Size="50px" required>
 		</p>
 		<p>
 			<label for="Lugar" >Lugar: </label>
-			<input type="text" name="Lugar ">
+			<input id="Lugar" type="text" placeholder="Ingrese el lugar" Size="50px" required>
 		</p>
 	
 		<p>
