--- a/pagina/index.html
+++ b/pagina/index.html
@@ -2,8 +2,18 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, user scalable=no">
+<meta name="author contente="Marissel Henrriquez">
+
+<svg>
+<image xlink:href="../Imagenes/svg/dibujoLogoMarissel.svg" width="200" height="200"> 
+</image>
+</svg>
+  
+
 <title>Hoja de vida </title>
 </head>
+
 <body>
 <h1> Hoja de vida </h1>
 <h2> Marissel Henrriquez </h2>
@@ -35,13 +45,13 @@ Docente del 12º Bachillerato Tecnico Profesional en Informatica.
 </br>
 
 
-
-
-
 <footer>
 	<contacto>
-<correo-electronico>ceniamarissel504@hotmail.com</correo-electronico>
-<facebook> 
+<correo-electronico>ceniamarissel504@hotmail.com</correo-electronico> 
+
+<p> <a href="https://www.facebook.com/marisselhenrriquez504" target= "_blank"> Facebook Marissel Henrriquez </a>
+
+</p>
   </contacto>
 </footer>
 
