--- a/pagina/experiencia.html
+++ b/pagina/experiencia.html
@@ -2,9 +2,31 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, user scalable=no">
+<meta name="author contente="Marissel Henrriquez">
+
+<svg>
+<image xlink:href="../Imagenes/svg/dibujoLogoMarissel.svg" width="200" height="200"> 
+</image>
+</svg>
+  
+
+
 <title>Experiencia</title>
 </head>
 
+
 <body>
+
+<h1> Hoja de vida </h1>
+<h2> Marissel Henrriquez </h2>
+<h3> El Paraiso, El Paraiso Honduras 20 de mayo de 1993 </h3>
+ 
+<ul>
+<li> <a href="index.html">Inicio</a> </li>
+<li><a href="educacion.html">Educaciòn</a>  </li>
+<li><a href="experiencia.html">Experiencia</a>  </li>
+</ul>
+
 </body>
 </html>
