edicion experiencia y audio

--- a/pagina/experiencia.html
+++ b/pagina/experiencia.html
@@ -4,15 +4,13 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user scalable=no">
 <meta name="author contente="Marissel Henrriquez">
-
+<title>Experiencia</title>
 <svg>
 <image xlink:href="../Imagenes/svg/dibujoLogoMarissel.svg" width="200" height="200"> 
 </image>
 </svg>
-  
+ 
 
-
-<title>Experiencia</title>
 </head>
 
 
@@ -21,12 +19,41 @@
 <h1> Hoja de vida </h1>
 <h2> Marissel Henrriquez </h2>
 <h3> El Paraiso, El Paraiso Honduras 20 de mayo de 1993 </h3>
+
  
 <ul>
 <li> <a href="index.html">Inicio</a> </li>
 <li><a href="educacion.html">Educaciòn</a>  </li>
 <li><a href="experiencia.html">Experiencia</a>  </li>
 </ul>
+
+
+<h2> Experiencia </h2>
+<p>
+<h3> Habilidades e intereses </h3>
+
+</p>
+
+<p>
+<h3> Hobbies y actividades </h3>
+<audio src="../audio/hobbies.m4a" controls preload="none"> 
+</audio>
+</p>
+
+
+
+<footer>
+
+<h4> Contacto </h4>
+<ul>
+<contacto>
+<li><correo-electronico>ceniamarissel504@hotmail.com</correo-electronico> </li>
+<li><a href="https://www.facebook.com/marisselhenrriquez504" target= "_blank"> Facebook Marissel Henrriquez </a></li>
+<li><Celular>+50489806445</celular>
+  </contacto>
+
+</ul>
+</footer>
 
 </body>
 </html>
