--- a/pagina/index.html
+++ b/pagina/index.html
@@ -4,14 +4,14 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user scalable=no">
 <meta name="author contente="Marissel Henrriquez">
-
+<title>Hoja de vida </title>
 <svg>
 <image xlink:href="../Imagenes/svg/dibujoLogoMarissel.svg" width="200" height="200"> 
 </image>
 </svg>
   
 
-<title>Hoja de vida </title>
+
 </head>
 
 <body>
@@ -46,14 +46,18 @@ Docente del 12º Bachillerato Tecnico Profesional en Informatica.
 
 
 <footer>
-	<contacto>
-<correo-electronico>ceniamarissel504@hotmail.com</correo-electronico> 
 
-<p> <a href="https://www.facebook.com/marisselhenrriquez504" target= "_blank"> Facebook Marissel Henrriquez </a>
-
-</p>
+<h4> Contacto </h4>
+<ul>
+<contacto>
+<li><correo-electronico>ceniamarissel504@hotmail.com</correo-electronico> </li>
+<li><a href="https://www.facebook.com/marisselhenrriquez504" target= "_blank"> Facebook Marissel Henrriquez </a></li>
+<li><Celular>+50489806445</celular>
   </contacto>
+
+</ul>
 </footer>
+
 
 
 </body>
