--- a/pagina/educacion.html
+++ b/pagina/educacion.html
@@ -4,14 +4,13 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user scalable=no">
 <meta name="author contente="Marissel Henrriquez">
+<title>Educacion </title>
 
 <svg>
 <image xlink:href="../Imagenes/svg/dibujoLogoMarissel.svg" width="200" height="200"> 
 </image>
 </svg>
   
-
-<title>Educacion </title>
 </head>
 
 <body>
@@ -97,5 +96,21 @@
 		</form>
 </Formulario>
             
+            
+<footer>
+
+<h4> Contacto </h4>
+<ul>
+<contacto>
+<li><correo-electronico>ceniamarissel504@hotmail.com</correo-electronico> </li>
+<li><a href="https://www.facebook.com/marisselhenrriquez504" target= "_blank"> Facebook Marissel Henrriquez </a></li>
+<li><Celular>+50489806445</celular>
+  </contacto>
+
+</ul>
+</footer>
+</p>
+  </contacto>
+</footer>
 </body>
 </html>
