--- a/pagina/experiencia.html
+++ b/pagina/experiencia.html
@@ -31,7 +31,17 @@
 <h2> Experiencia </h2>
 <p>
 <h3> Habilidades e intereses </h3>
+<video>
+<source src="/video/VID_20171017_122934(2).3gp" type="VID_20171017_122934(2)/3gp" width="500px" height="500px"> 
 
+<source src="../video/VID_20171017_122934(2).mp4" type="VID_20171017_122934(2)/mp4" width="500px" height="500px"> 
+
+
+<source src="../video/VID_20171017_122934(2).webm" type="VID_20171017_122934(2)/webm" width="500px" height="500px">
+ 
+Tu navegador no soporta ninguno de los videos. 
+
+</video>
 </p>
 
 <p>
