--- a/pagina/experiencia.html
+++ b/pagina/experiencia.html
@@ -34,10 +34,9 @@
 <video>
 <source src="/video/VID_20171017_122934(2).3gp" type="VID_20171017_122934(2)/3gp" width="500px" height="500px"> 
 
-<source src="../video/VID_20171017_122934(2).mp4" type="VID_20171017_122934(2)/mp4" width="500px" height="500px"> 
+<source src="../video/VID_20171017_122934 (2).mp4"" type="../video/VID_20171017_122934 (2)/mp4" width="500px" height="500px">
 
 
-<source src="../video/VID_20171017_122934(2).webm" type="VID_20171017_122934(2)/webm" width="500px" height="500px">
  
 Tu navegador no soporta ninguno de los videos. 
 
