--- a/pagina/experiencia.html
+++ b/pagina/experiencia.html
@@ -45,7 +45,7 @@ Tu navegador no soporta ninguno de los videos.
 
 <p>
 <h3> Hobbies y actividades </h3>
-<audio src="../audio/hobbies.m4a" controls preload="none"> 
+<audio src="../audio/hobbies.mp3" controls preload="none">
 </audio>
 </p>
 
